split mobile and desktop version

--- a/website/wwwSwap/header.html
+++ b/website/wwwSwap/header.html
@@ -27,6 +27,14 @@
 		color: #4A4A4A;
 		line-height: 17px;
 	}
+	img.ui-icon {
+		float:left;
+		height: 49px;
+		width: 49px;
+		margin: 10px;
+		border-radius: 6px;
+	}	
+
 </style>
 
 		<img class='ui-icon' src='/resources/images/swap_icon.png'>
@@ -35,5 +43,5 @@
 			<div class='ui-header-bottom-text'> Duffy, Inc. </div>
 		</div>
 		<div class='ui-header-rhs'>
-			<div class='ui-clickable-button ui-install-button' id='install-text'>Get early access</div>
+			<div class='ui-clickable-button ui-install-button hidden' id='install-text'>Get early access</div>
 		</div>
