Install page tweaks

--- a/website/wwwSwap/body_mobile.html
+++ b/website/wwwSwap/body_mobile.html
@@ -9,7 +9,7 @@
 <script>
 	function signupClicked(){
 		$('#install-text').empty();
-		$('#install-text').append("See below");
+		$('#install-text').append("DONE");
 		$('#install-text').addClass('ui-button-clicked');
 		$('div.ui-pages').fadeOut(200);
 		$('div.post-install').fadeIn(200);
@@ -23,7 +23,7 @@
 	</div>
 
 	<div class="ui-bottom"> 
-		Get notified to share photos when you are hanging out with friends!
+		Get personalized reminders to Swap photos when you're hanging out
 	</div>
 </div>
 <div class='ui-pages'>
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="ui-bottom"> 
-		Build a shared gallery with friends!
+		Build a shared gallery with friends
 	</div>
 </div>		
 <div class='ui-pages'>
@@ -41,7 +41,7 @@
 	</div>
 
 	<div class="ui-bottom"> 
-		Share photos with a single tap - friends who were there are preselected!
+		Share photos with a single tap – friends who were there are preselected
 	</div>
 </div>
 <div class='ui-pages'>
@@ -50,22 +50,23 @@
 	</div>
 
 	<div class="ui-bottom"> 
-		Like and comment privately with friends on a photo!
+		Photos on Swap are always private – say what you really think
 	</div>
 </div>
 <div class="ui-phone-num post-install hidden"> 
 	<div class="ui-text">
-		Enter your phone number to get on the waitlist:
+        Swap is availble to a select few in private beta only.
+		Enter your phone number to get on the waitlist.
 	</div>
 	<form id='phoneform' action='http://dev.duffyapp.com:8000/strand/api/website_registration'>
 		<input name='phone_number' class="textbox" type="text" id="phone" placeholder="(843) 555-5555">
 		<input type="hidden" name='source' value='main'>
 	</form>
-	<div class='ui-clickable-button ui-submit-button'> Submit </div>
+	<div class='ui-clickable-button ui-submit-button'> DONE </div>
 
 </div>
 <div class='ui-bottom ui-post-signup hidden' id='post-signup'>
-	Thanks. You should get a confirmation SMS shortly.
+	We've got your spot in line! Hang tight. You'll get an SMS confirmation shortly.
 	<div class='ui-fb-tracker'> </div>
 	<div class="ui-post-signup-more hidden"> How do I get access sooner?</div>
 	<div class="ui-post-signup-details hidden"> More friends on Swap means better photo suggestions for you.
