--- a/website/wwwSwap/header.html
+++ b/website/wwwSwap/header.html
@@ -43,5 +43,5 @@
 			<div class='ui-header-bottom-text'> Duffy, Inc. </div>
 		</div>
 		<div class='ui-header-rhs'>
-			<div class='ui-clickable-button ui-install-button hidden' id='install-text'>GET ACCESS</div>
+			<div class='ui-clickable-button ui-install-button ui-header-button hidden' id='install-text'></div>
 		</div>
