--- a/website/wwwSwap/index.html
+++ b/website/wwwSwap/index.html
@@ -104,7 +104,6 @@
 		}
 		else {
 			url = 'http://prod.strand.duffyapp.com/strand/api/website_registration';
-			//url = 'http://dev.duffyapp.com:7000/strand/api/website_registration';
 			code = getCode();
 			$.ajax({
      			url: url,
@@ -125,7 +124,13 @@
 	function postBodyLoad(){
 		// submit button clicked
 		$('div.ui-submit-button').click(function(){
+			$(this).addClass('ui-button-clicked');
+			$(this).empty();
+			$(this).append('<img height=16px width=16px src=/resources/images/loading.gif>');
 			submitClicked();
+			$(this).removeClass('ui-button-clicked');
+			$(this).empty();
+			$(this).append('Submit')
 		});
 		$(document).on("keypress", "#phone", function(e){
 			if (e.which == 13){
