--- a/website/wwwSwap/index_request.html
+++ b/website/wwwSwap/index_request.html
@@ -124,7 +124,13 @@
 	function postBodyLoad(){
 		// submit button clicked
 		$('div.ui-submit-button').click(function(){
+			$(this).addClass('ui-button-clicked');
+			$(this).empty();
+			$(this).append('<img height=16px width=16px src=/resources/images/loading.gif>');
 			submitClicked();
+			$(this).removeClass('ui-button-clicked');
+			$(this).empty();
+			$(this).append('Submit')
 		});
 		$(document).on("keypress", "#phone", function(e){
 			if (e.which == 13){
