fix double clicking on submit button

--- a/website/wwwSwap/body_invite_desktop.html
+++ b/website/wwwSwap/body_invite_desktop.html
@@ -73,7 +73,7 @@
 			<input name='phone_number' class="textbox" type="text" id="phone" placeholder="(843) 555-5555">
 			<input type="hidden" name='source' value='main'>
 		</form>
-		<div class='ui-clickable-button ui-submit-button'> Submit </div>
+		<div class='ui-clickable-button ui-submit-button'> DONE </div>
 
 	</div>
 <div class='ui-text ui-post-signup hidden' id='post-signup'>
