--- a/website/wwwSwap/index.html
+++ b/website/wwwSwap/index.html
@@ -101,6 +101,7 @@
 		value = $('#phone').val();
 		if (value.length < 10 || value.indexOf("5555") != -1) {
 			alert("Please enter a valid 10-digit phone number");
+			return false;
 		}
 		else {
 			url = 'http://prod.strand.duffyapp.com/strand/api/website_registration';
@@ -120,17 +121,23 @@
      			}
  			});	
 		}
+		return true;
 	}
 	function postBodyLoad(){
 		// submit button clicked
 		$('div.ui-submit-button').click(function(){
+			// this is to prevent double clicking
+			if ($(this).hasClass('ui-button-clicked')){
+				return;
+			} 
 			$(this).addClass('ui-button-clicked');
 			$(this).empty();
 			$(this).append('<img height=16px width=16px src=/resources/images/loading.gif>');
-			submitClicked();
-			$(this).removeClass('ui-button-clicked');
-			$(this).empty();
-			$(this).append('Submit')
+			if (submitClicked()==false) {
+				$(this).removeClass('ui-button-clicked');
+				$(this).empty();
+				$(this).append('DONE')
+			}
 		});
 		$(document).on("keypress", "#phone", function(e){
 			if (e.which == 13){
