--- a/peanut/static/smskeeper/index.html
+++ b/peanut/static/smskeeper/index.html
@@ -3,12 +3,13 @@
   <head>
     <link rel="stylesheet" href="style/style.css" />
     <!-- React JS -->
-    <script src="https://fb.me/react-0.13.0.min.js"></script>
+    <!-- <script src="https://fb.me/react-0.13.0.min.js"></script> -->
+		<script src="https://fb.me/react-0.13.0.js"></script>	
     <script src="https://fb.me/JSXTransformer-0.13.0.js"></script>
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- Class Names -->
-    <script src="build/node_modules/classnames/index.js"></script>
+    <script src="src/node_modules/classnames/index.js"></script>
     
   </head>
   <body>
